[package]
name = "solderparty-rp2040-stamp-carrier"
version = "0.3.0"
authors = ["9names", "The rp-rs Developers"]
edition = "2021"
homepage = "https://github.com/rp-rs/rp-hal/tree/main/boards/solderparty-rp2040-stamp-carrier"
description = "Board Support Package for the Solder Party RP2040 Stamp"
license = "MIT OR Apache-2.0"
repository = "https://github.com/9names/solderparty-rp2040-stamp-carrier-carrier.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = { version = "0.7", optional = true }
embedded-hal ="0.2.5"
fugit = "0.3.6"
nb = "1.0.0"
pio = "0.2.0"
rp2040-boot2 = { version = "0.2.0", optional = true }
rp2040-hal = { version = "0.6.0" }
smart-leds = "0.3.0"
ws2812-pio = "0.4.0"

[features]
default = ["rt", "boot2"]
boot2 = ["rp2040-boot2"]
rt = ["cortex-m-rt","rp2040-hal/rt"]

[dev-dependencies]
defmt = "0.3"
defmt-rtt ="0.3"
panic-halt= "0.2.0"
panic-probe = "0.3"
